# json2rust

./: .gitignore  Cargo.toml  LICENSE  claude-context.md  debug_profile.rs  debug_test.rs  run_tests.sh  test_backward_compat.rs  test_backward_compat.sh  test_enum_deserialization.rs  test_enum_deserialization.sh  test_existing.rs  test_input.json  test_multiple_structs.rs  test_preservation.sh
json2rust-cli/: Cargo.toml
json2rust-cli/src/: main.rs
json2rust-cli/tests/: integration_tests.rs
json2rust-evolution/: Cargo.toml
json2rust-evolution/src/: evolution.rs  generator.rs  lib.rs  optimizer.rs  parser.rs  shape.rs  surgery.rs
json2rust-lib/: Cargo.toml
json2rust-lib/src/: analyzer.rs  codegen.rs  lib.rs  parser.rs  tests.rs  types.rs
json2rust-web/: Cargo.toml  README.md  build.sh  index.html
json2rust-web/src/: lib.rs
test_compat/: Cargo.toml
test_compat/src/: main.rs
testdata/: existing_rust1.rs  json_input1.rs  json_input_small.rs  json_input_v2.rs  new_existing_rust1.rs  new_json_input1.json
