[package]
name = "json2rust-evolution"
version = "0.1.0"
edition = "2021"
description = "Core library for JSON to Rust type evolution"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
